--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "git": "^0.1.5",
+    "paypal-checkout": "^4.0.305",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-paypal-button-v2": "^2.6.1",
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
